--- a/HmacSha256/pom.xml
+++ b/HmacSha256/pom.xml
@@ -9,8 +9,8 @@
     <version>1.0</version>
 
     <properties>
-        <maven.compiler.source>5</maven.compiler.source>
-        <maven.compiler.target>5</maven.compiler.target>
+        <maven.compiler.source>8</maven.compiler.source>
+        <maven.compiler.target>8</maven.compiler.target>
     </properties>
 
 
@@ -24,7 +24,7 @@
                     <archive>
                         <manifest>
                             <addClasspath>true</addClasspath>
-                            <mainClass>com.tme.it.HmacSha256</mainClass>
+                            <mainClass>com.xuan.it.HmacSha256</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
